@@ -1,3 +1,7 @@
+drkns 03.07.2016 18:07:21 +0200 - build 4734
+
+1. Рефакторинг.
+
 drkns 02.07.2016 15:10:30 +0200 - build 4733
 
 1. 0003261: Crash on ф: in command line
